--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
 		a tall handsome man<br>
 		In a dusty black coat with<br>
 		a red right hand</p>
+		<p>He'll wrap you in his arms,<br>
+		tell you that you've been a good boy<br>
+		He'll rekindle all the dreams<br>
+		it took you a lifetime to destroy<br>
+		He'll reach deep into the hole,<br>
+		heal your shrinking soul,<br>
+		but there won't be a single thing<br>
+		that you can do<br>
+		He's a god, he's a man,<br>
+		he's a ghost, he's a guru<br>
+		They're whispering his name<br>
+		through this disappearing land<br>
+		But hidden in his coat<br>
+		is a red right hand</p>
 	</section>
 </body>
 </html>
