--- a/index.html
+++ b/index.html
@@ -38,6 +38,32 @@
 		through this disappearing land<br>
 		But hidden in his coat<br>
 		is a red right hand</p>
+		<p>You ain't got no money?<br>
+		He'll get you some<br>
+		You ain't got no car? He'll get you one<br>
+		You ain't got no self-respect,<br>
+		you feel like an insect<br>
+		Well don't you worry buddy,<br>
+		cause here he comes<br>
+		Through the ghettos and the barrio<br>
+		and the bowery and the slum<br>
+		A shadow is cast wherever he stands<br>
+		Stacks of green paper in his<br>
+		red right hand</p>
+		<p>You'll see him in your nightmares,<br>
+		you'll see him in your dreams<br>
+		He'll appear out of nowhere but<br>
+		he ain't what he seems<br>
+		You'll see him in your head,<br>
+		on the TV screen<br>
+		And hey buddy, I'm warning<br>
+		you to turn it off<br>
+		He's a ghost, he's a god,<br>
+		he's a man, he's a guru<br>
+		You're one microscopic cog<br>
+		in his catastrophic plan<br>
+		Designed and directed by<br>
+		his red right hand</p>
 	</section>
 </body>
 </html>
