--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>A great song</title>
+	<title>A great gloomy song</title>
 	<link rel="stylesheet" type="text/css" href="sass/style.css">
 </head>
 <body>
