Change site title for final version

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>A great creepy song</title>
+	<title>My favourite creepy song</title>
 	<link rel="stylesheet" type="text/css" href="sass/style.css">
 </head>
 <body>
